--- a/el_futurix/lolita.css
+++ b/el_futurix/lolita.css
@@ -100,3 +100,16 @@ button {
 .id_elm{
   margin-bottom: 60px;
 }
+
+form h4{
+  cursor: pointer;
+}
+
+form h4:hover{
+  color: aqua;
+}
+
+form span{
+  position: relative;
+  top: 8px;
+}
