--- a/el_futurix/lolita.css
+++ b/el_futurix/lolita.css
@@ -116,3 +116,247 @@ form span{
   position: relative;
   top: 8px;
 }
+
+
+
+
+@font-face {
+  font-family: sansation;
+  src: url(fonts/sansation.ttf);
+}
+
+body {
+  background-color: transparent;
+  color: aliceblue;
+  font-family: sansation;
+  padding-bottom: 100px;
+}
+
+input {
+  border: none;
+  border-bottom: solid white 1px;
+  background-color: rgba(0, 0, 0, 0.604);
+  border-radius: 10px;
+  height: 30px;
+  padding-left: 15px;
+  width: 100%;
+  max-width: 300px;
+  color: white;
+  font-size: larger;
+}
+
+#submit {
+  width: fit-content;
+  border-radius: 5px;
+  background-color: aquamarine;
+  color: black;
+  font-weight: 700;
+  border: none;
+}
+
+#submit:hover {
+  background-color: azure;
+  color: black;
+  font-weight: 700;
+}
+
+#frm_cv {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #00000096;
+}
+
+#frm_cnt {
+  width: fit-content;
+  margin: 0 auto;
+  margin-top: 50px;
+  padding: 20px;
+  border-radius: 15px;
+  background-color: rgba(0, 0, 0, 0.999);
+  position: relative;
+  overflow-y: auto;
+  max-height: calc(100vh - 150px);
+}
+
+#frm_cnt .close {
+  width: fit-content;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: #272727;
+  position: absolute;
+  right: 10px;
+  cursor: pointer;
+}
+
+#frm_cnt .close:hover {
+  background-color: #481313;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 20px;
+  background-color: rgba(61, 61, 61, 0.47);
+  margin: 20px;
+  border-radius: 20px;
+}
+
+.image {
+  flex: 1;
+  min-width: 300px;
+  max-width: 500px;
+  padding: 20px;
+}
+
+.image img {
+  width: 100%;
+  height: auto;
+  border-radius: 15px;
+}
+
+.description {
+  flex: 2;
+  padding: 20px;
+  max-width: 500px;
+}
+
+h1 {
+  color: #ffffff;
+  font-size: 2rem;
+  margin-bottom: 10px;
+}
+
+p {
+  font-size: 1.2rem;
+  line-height: 1.6;
+  color: #bbbbbb;
+  background-color: #272727;
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.container .btn {
+  background-color: #481313;
+  border-radius: 15px;
+  width: fit-content;
+  padding: 10px;
+  font-size: large;
+  cursor: pointer;
+}
+
+.key {
+  font-size: large;
+  color: rgb(11, 10, 10);
+  font-weight: 900;
+  padding: 10px;
+  background-color: #0f94e6f4;
+  border-radius: 10px;
+  width: fit-content;
+  margin-bottom: 20px;
+}
+
+.val {
+  padding: 5px;
+  color: azure;
+  margin-left: auto;
+  margin-top: 10px;
+}
+
+.key {
+font-weight: 700;
+font-size: x-large;
+color: #00d9ff;
+background-color: #2c0d0d;
+border-radius: 5px;
+padding: 5px;
+width: fit-content;
+margin-bottom: 5px;
+}
+
+.val {
+font-weight: 100;
+color: #ffffff;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+  .container {
+      flex-direction: column;
+      align-items: center;
+  }
+
+  .description {
+      padding: 10px;
+  }
+
+  .image {
+      max-width: 100%;
+  }
+
+  h1 {
+      font-size: 1.8rem;
+  }
+
+  p {
+      font-size: 1rem;
+  }
+
+  input {
+      width: 100%;
+  }
+}
+
+@media (max-width: 550px) {
+  .container {
+      align-items: unset;
+  }
+}
+
+.ip_flx {
+  display: flex;
+  align-items: center;
+}
+
+.ip_flx button {
+  border: 0;
+  background-color: #00D9FF;
+  border-radius: 3px;
+  color: black;
+  font-size: x-large;
+  font-weight: 700;
+  height: 30px;
+  padding: 3px;
+  margin-left: 10px;
+}
+
+.name {
+  font-size: small;
+  margin: 0;
+  color: #555;
+}
+
+.id_elm {
+  margin-bottom: 60px;
+}
+
+form h4 {
+  cursor: pointer;
+}
+
+form h4:hover {
+  color: aqua;
+}
+
+form span {
+  position: relative;
+  top: 8px;
+}
+
+#submit{
+  cursor: pointer;
+}
