--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ body{
 #frm_cont{
   position: fixed;
   top: 130px;
-  bottom: 0px;
+  /* bottom: 0px; */
   left: 0;
   right: 0;
   width: 100%;
